--- a/.github/workflows/licensed.yml
+++ b/.github/workflows/licensed.yml
@@ -10,6 +10,8 @@ jobs:
     name: Check licenses
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - run: npm ci
       - name: Install licensed
         run: |
